fixed text issue on mobile

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -13,7 +13,6 @@
   border-right: 0.15em solid black;
   animation: typing 3.5s steps(40, end),
     blink-caret 0.75s steps(1, start) infinite;
-  white-space: nowrap;
 }
 
 @keyframes typing {
